src/test/fail/basic_syntax/bad_comma.lly
#[
SyntaxError: Unexpected token ,.
Where: File "bad_comma.lly" at line 6
]#

var a = 10    a = 10,
